infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: supplyboost
  labels:
    name: supplyboost
    environment: production
